ChangeLog for the Astro project.

20140701:
	* add SquareAdapter
	* add various focus measure adapters for autofocus
	* refactor FocusWork class
	* fix a bug in the moveto method of the Focuser base class

20140630:
	* new impementation FWHM2
	* Connected Component class
	* MinRadius class
	* LevelMask extraction adapter

20140629:
	* GuidingThread -> Thread
	* add focusing.cpp tool
	* add FocusCompute class and test
	* add FocusingWork and Focusing classes

20140626:
	* eliminate the GuiderNewImageCallbackData, replaced by the revamped
	  ImageCallbackData class

20140625:
	* fix many warnings
	* add QsiGuiderPort implementation
	* complete the Ccd implementation of the Qsi camera
	* fix some typos
	* ensure instantiation of MinimumEstimator classes

20120117:
	* start the project

--
$Id$